--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
 <script
   src='https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js'></script>
 
@@ -36,11 +45,13 @@
     <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
     <!-- <a-nft type='nft' url='./trex/trex-image/trex' smooth='true' smoothCount='10' smoothTolerance='0.01'
       smoothThreshold='5'> -->
-    <a-nft type='nft' url='./trex/trex-react/react' smooth='true' smoothCount='10'
-      smoothTolerance='0.01' smoothThreshold='5'>
+    <a-nft type='nft' url='./trex/trex-react/react' smooth='true' smoothCount='10' smoothTolerance='0.01'
+      smoothThreshold='5'>
       <a-entity gltf-model='./trex/scene.gltf' scale="10 10 10" position="100 300 -100">
       </a-entity>
     </a-nft>
     <a-entity camera></a-entity>
   </a-scene>
 </body>
+
+</html>
