--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
     <!-- <a-nft type='nft' url='./trex/trex-image/trex' smooth='true' smoothCount='10' smoothTolerance='0.01'
       smoothThreshold='5'> -->
-    <a-nft type='nft' url='./trex/trex-react/react' smooth='true' smoothCount='10' smoothTolerance='0.01'
+    <a-nft type='nft' url='./trex/trex-itech/itech' smooth='true' smoothCount='10' smoothTolerance='0.01'
       smoothThreshold='5'>
-      <a-entity gltf-model='./trex/scene.gltf' scale="10 10 10" position="100 300 -100">
+      <a-entity gltf-model='./trex/scene.gltf' scale="40 40 40" position="100 300 -100">
       </a-entity>
     </a-nft>
     <a-entity camera></a-entity>
