--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
     <!-- <a-nft type='nft' url='./trex/trex-image/trex' smooth='true' smoothCount='10' smoothTolerance='0.01'
       smoothThreshold='5'> -->
-    <a-nft type='nft' url='./aframe/trex/trex-itech/itech' smooth='true' smoothCount='10' smoothTolerance='0.01'
+    <a-nft type='nft' url='./trex/itech' smooth='true' smoothCount='10' smoothTolerance='0.01'
       smoothThreshold='5'>
       <a-entity gltf-model='./trex/scene.gltf' scale="40 40 40" position="100 300 -100">
       </a-entity>
