--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <a-entity gltf-model='./trex/scene.gltf' scale="40 40 40" position="100 300 -100">
       </a-entity>
     </a-nft>
-    <a-entity camera></a-entity>
+    <a-entity camera="active: true" look-controls wasd-controls position="0 1.6 0" data-aframe-default-camera></a-entity>
   </a-scene>
 </body>
 
