--- a/index.html
+++ b/index.html
@@ -36,23 +36,35 @@
 <!-- rawgithack development URL -->
 <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
 
+<script src="./app.js"></script>
+
 <body style='margin : 0px; overflow: hidden;'>
   <!-- minimal loader shown until image descriptors are loaded -->
   <div class="arjs-loader">
     <div>Loading, please wait...</div>
   </div>
+
+
+  <div class="controls">
+    <button id="button">Get camera</button>
+    <select id="select">
+      <option></option>
+    </select>
+  </div>
+
+
   <a-scene vr-mode-ui='enabled: false;' renderer="logarithmicDepthBuffer: true;" embedded
     arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
 
     <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
     <!-- <a-nft type='nft' url='./trex/trex-image/trex' smooth='true' smoothCount='10' smoothTolerance='0.01'
       smoothThreshold='5'> -->
-    <a-nft type='nft' url='./trex/itech' smooth='true' smoothCount='10' smoothTolerance='0.01'
-      smoothThreshold='5'>
+    <a-nft type='nft' url='./trex/itech' smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
       <a-entity gltf-model='./trex/scene.gltf' scale="40 40 40" position="100 300 -100">
       </a-entity>
     </a-nft>
-    <a-entity camera="active: true" look-controls wasd-controls position="0 1.6 0" data-aframe-default-camera></a-entity>
+    <a-entity camera="active: true" look-controls wasd-controls position="0 1.6 0" data-aframe-default-camera>
+    </a-entity>
   </a-scene>
 </body>
 
